--- a/index.html
+++ b/index.html
@@ -318,10 +318,10 @@
                             <div class="container-fluid">
                                 <div class="slide-content">
                                     <div data-swiper-parallax="300" class="slide-title" style="transform: translate3d(300px, 0px, 0px); transition-duration: 0ms;">
-                                        <h2>Sarah &amp; Daniel</h2>
+                                        <h2>Nhuy &amp; Tot</h2>
                                     </div>
                                     <div data-swiper-parallax="400" class="slide-text" style="transform: translate3d(400px, 0px, 0px); transition-duration: 0ms;">
-                                        <p>We Are Getting Married Nov 22,2021</p>
+                                        <p>We Are Getting Married Oct 06,2024</p>
                                     </div>
                                     <div class="border-1"></div>
                                     <div class="border-2"></div>
@@ -339,10 +339,10 @@
                             <div class="container-fluid">
                                 <div class="slide-content">
                                     <div data-swiper-parallax="300" class="slide-title" style="transform: translate3d(300px, 0px, 0px); transition-duration: 0ms;">
-                                        <h2>Sarah &amp; Daniel</h2>
+                                        <h2>Nhuy &amp; Tot</h2>
                                     </div>
                                     <div data-swiper-parallax="400" class="slide-text" style="transform: translate3d(400px, 0px, 0px); transition-duration: 0ms;">
-                                        <p>We Are Getting Married Nov 22,2021</p>
+                                        <p>We Are Getting Married Oct 06,2024</p>
                                     </div>
                                     <div class="border-1"></div>
                                     <div class="border-2"></div>
@@ -361,10 +361,10 @@
                             <div class="container-fluid">
                                 <div class="slide-content">
                                     <div data-swiper-parallax="300" class="slide-title" style="transform: translate3d(0px, 0px, 0px); transition-duration: 0ms;">
-                                        <h2>Sarah &amp; Daniel</h2>
+                                        <h2>Nhuy &amp; Tot</h2>
                                     </div>
                                     <div data-swiper-parallax="400" class="slide-text" style="transform: translate3d(0px, 0px, 0px); transition-duration: 0ms;">
-                                        <p>We Are Getting Married Nov 22,2021</p>
+                                        <p>We Are Getting Married Oct 06,2024</p>
                                     </div>
                                     <div class="border-1"></div>
                                     <div class="border-2"></div>
@@ -383,10 +383,10 @@
                             <div class="container-fluid">
                                 <div class="slide-content">
                                     <div data-swiper-parallax="300" class="slide-title" style="transform: translate3d(-300px, 0px, 0px); transition-duration: 0ms;">
-                                        <h2>Sarah &amp; Daniel</h2>
+                                        <h2>Nhuy &amp; Tot</h2>
                                     </div>
                                     <div data-swiper-parallax="400" class="slide-text" style="transform: translate3d(-400px, 0px, 0px); transition-duration: 0ms;">
-                                        <p>We Are Getting Married Nov 22,2021</p>
+                                        <p>We Are Getting Married Oct 06,2024</p>
                                     </div>
                                     <div class="border-1"></div>
                                     <div class="border-2"></div>
@@ -404,10 +404,10 @@
                             <div class="container-fluid">
                                 <div class="slide-content">
                                     <div data-swiper-parallax="300" class="slide-title" style="transform: translate3d(-300px, 0px, 0px); transition-duration: 0ms;">
-                                        <h2>Sarah &amp; Daniel</h2>
+                                        <h2>Nhuy &amp; Tot</h2>
                                     </div>
                                     <div data-swiper-parallax="400" class="slide-text" style="transform: translate3d(-400px, 0px, 0px); transition-duration: 0ms;">
-                                        <p>We Are Getting Married Nov 22,2021</p>
+                                        <p>We Are Getting Married Oct 06,2024</p>
                                     </div>
                                     <div class="border-1"></div>
                                     <div class="border-2"></div>
@@ -452,7 +452,7 @@
                                 <div class="couple-img">
                                     <img src="./src/2.jpg" alt="">
                                 </div>
-                                <h3>Daniel Oliver</h3>
+                                <h3>Tot</h3>
                                 <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis give you com of system. </p>
                                 <div class="social">
                                     <ul>
@@ -470,7 +470,7 @@
                                 <div class="couple-img">
                                     <img src="./src/3.jpg" alt="">
                                 </div>
-                                <h3>Sarah Margrate</h3>
+                                <h3>Nhuy</h3>
                                 <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis give you com of system. </p>
                                 <div class="social">
                                     <ul>
@@ -782,7 +782,7 @@
             <div class="conatiner-fluid">
                 <div class="wpo-cta-item">
                     <h2>Adventure Begins</h2>
-                    <p>Nov 22,2021, Wedding Unity Center, road 525 USA</p>
+                    <p>Oct 06,2024, Wedding Unity Center, road 525 USA</p>
                     <a class="theme-btn-s2" href="https://wpocean.com/html/tf/loveme/contact.html">View Details</a>
                 </div>
             </div>
